--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Build output
 dist/
 build/
 *.tsbuildinfo
-
-# Environment variables
-.env
-.env.local
-.env.*.local
 
 # IDE and editor files
 .idea/
@@ -20,6 +15,9 @@ build/
 *.swp
 *.swo
 .DS_Store
+.env
+.env.local
+.env.*.local
 
 # Logs
 logs/
@@ -27,7 +25,26 @@ logs/
 
 # Testing
 coverage/
+.nyc_output/
 
 # Temporary files
 tmp/
-temp/ 
+temp/
+
+# TypeScript
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity 
