--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
   "name": "mcp-typescript-workshop",
   "version": "1.0.0",
-  "description": "MCP Server Implementation with TypeScript",
-  "type": "module",
+  "description": "MCP Server implementation in TypeScript",
   "main": "dist/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "dev": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "mcp",
+    "typescript",
+    "server"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "@types/express": "^5.0.2",
+    "@modelcontextprotocol/sdk": "1.12.1",
     "axios": "^1.6.7",
-    "express": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/sqlite3": "^5.1.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
